Fix alignment issues in options

--- a/src/content/shared.css
+++ b/src/content/shared.css
@@ -52,6 +52,9 @@ body {
 
 .right {
     text-align: right;
+    justify-content: end;
+    flex-grow: 1;
+    flex-shrink: 0;
 }
 
 [hidden] {
@@ -65,7 +68,6 @@ body {
 .topbar {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     background: var(--accent-dark-bg);
 }
 
